tests/tests/ui/create_scoped_not_scope.stderr
error[E0277]: this scope does not support scoped creation
  --> tests/ui/create_scoped_not_scope.rs:11:13
   |
11 |     let _ = toasty::create!(in 42_i64 { name: "Carl" });
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this relation scope cannot create records
   |
   = help: the trait `toasty::schema::CreateScope` is not implemented for `i64`
   = note: Only direct relation scopes support scoped creation.
   = note: Multi-step (`via`) relation scopes can be queried and filtered, but Toasty cannot create records through them because that would require creating or choosing intermediate records.
note: required by a bound in `__force_check`
  --> tests/ui/create_scoped_not_scope.rs:11:13
   |
11 |     let _ = toasty::create!(in 42_i64 { name: "Carl" });
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `__force_check`
   = note: this error originates in the macro `toasty::create` (in Nightly builds, run with -Z macro-backtrace for more info)
